--- a/dist.ini
+++ b/dist.ini
@@ -39,7 +39,7 @@ Const::Fast = 0
 URI::Escape = 0
 Log::Any = 0.11
 Log::Any::Adapter = 0
-Log::Any::Adapter::ScreenColoredLevel = 0
+Log::Any::Adapter::Screen = 0
 Try::Tiny = 0
 Data::Serializer = 0
 YAML = 0
